--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ a:hover {
 }
 img
 {
-    width: 200px; /* Измените значение, чтобы установить ширину изображения */
+    width: 200px;
     height: auto;
-    border-radius: 10%; /* Для круглой формы аватарки */
+    border-radius: 10%;
 }
