--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@
     display: flex;
     justify-content: space-around;
   }
+  
   .slide_pagination
   {
     content: "";
@@ -177,6 +178,18 @@
     border-radius: 50px;
     background-color:#0C0C0E;
     margin-right: 10px;
+    cursor: pointer;
+    
+  }
+
+  .square_click-zone {
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .slide_pagination:last-child {
     margin-right: 0; 
