--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
    }
    @font-face {
     font-family: Inter;
-     src: url("assets/fonts/Inter-VariableFont_slnt\,wght.ttf");
+     src: url("assets/fonts/Inter-VariableFont_slnt,wght.ttf");
    }
 
    .container {
@@ -201,3 +201,215 @@
     justify-content: center;
     margin-top: 40px;
   }
+  .favorites_wrapper
+  {
+    width: 1440px;
+    display:flex;
+    justify-content: center;
+  }
+  .select_text
+  {
+    font-family: "Inter";
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24.2px;
+    color: #000000;
+  }
+  .season_change
+  {
+    width: 1440px;
+    margin-top: 40px;
+    margin-left: 20px;
+    margin-bottom: 40px;
+  }
+  label
+  {
+    font-family: "Inter";
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24.2px;
+    color: #000000;
+    margin-right: 90px ;
+    margin-left:20px
+  }
+  label:last-child {
+    margin-right: 0; 
+  }
+  
+  .radio-buttons {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+    cursor: pointer;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0em;
+
+  }
+  input[type="radio"] {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+  }
+
+  input[type="radio"]:checked + .radio-button__label:checked{
+    font-weight: 700;
+  }
+  
+  .radio-button__input {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #000000;
+    position: relative;
+    border-radius: 50%;
+    margin-right: 20px;
+  }
+  
+  .radio-button__input::before {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  background-color: #000000;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  opacity: 0;
+  transition: 0.2s;
+  }
+  
+  .radio-button__input:checked::before {
+    opacity: 1;
+    
+  }
+  .radio-button:has(.radio-button__input:checked)  {
+    font-weight: 700;
+}
+
+  .books_container {
+    display: flex;
+    justify-content: space-between; 
+    align-items: flex-start;
+    flex-wrap: wrap;
+  }
+  
+  .books_container > * {
+    width: calc(50% - 130px);  
+    margin: 10px 130px 10px 10px;
+  }
+  .books
+  {
+    width: 550px;
+    height: 555px;
+    border: 1px solid #000000;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 40px; 
+    margin-left: 20px;
+    position: relative;
+    gap:20px;
+    z-index: 1;
+  }
+ 
+  #item
+  {
+    margin-left: 20px;
+
+  }
+  .card_headline
+  {
+    display: flex;
+    font-family: Forum;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 2px;
+    color:#000000;
+    margin: 0px;
+    padding: 0px;
+    margin-top: 20px;
+    position: relative;
+    text-transform: capitalize;
+  }
+
+  .card_headline::before {
+    content: "";
+    position: absolute;
+    width: 60px;
+    height: 1px;
+    background-color:#BB945F;
+    top: 100%; 
+    left: 0;
+  }
+  .book_name
+  {
+    font-family: Inter;
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 2px;
+    color:#000000;
+    margin: 0px;
+    padding: 0px;
+    text-transform: uppercase;
+  }
+  .book_author
+  {
+    font-family: Inter;
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 2px;
+    color:#000000;
+    margin: 0px;
+    padding: 0px;
+    text-transform: capitalize
+  }
+  .book_description
+  {
+    font-family: Inter;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 2px;
+    font-style: normal;
+    color:#000000;
+    margin: 0px;
+    padding: 0px;
+    text-transform: capitalize;
+    width: 65%;
+  }
+  .buy-book_button
+  {
+    font-family: Inter;
+    font-size: 10px;
+    font-weight: 700;
+    line-height: 12px;
+    letter-spacing: 1px;
+    text-align: center;
+    width: 75px;
+    height: 30px;
+    cursor: pointer;
+    margin: 0px;
+    padding: 0px;
+    margin-bottom: min(15px);
+    position: absolute;
+    bottom: 0; 
+    
+  }
+  .book
+  {
+    align-self: flex-end;
+    position: absolute;
+    right: -40px;
+    bottom:-5px;
+    flex: 1 0 auto;
+  }
+
+ 
