--- a/style.css
+++ b/style.css
@@ -411,5 +411,98 @@
     bottom:-5px;
     flex: 1 0 auto;
   }
+  .coffee_wrapper
+  {
+    margin-top: 40px;
+    width: 1440px;
+  }
+  #coffee-headline
+  {
+    text-align: center;
+  }
+  
+  .coffee-text-wrapper
+  {
+    
+    color: #000000;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 2px;
+    width: 1440px;
+    margin-bottom: 40px;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-top: 40px;
+    text-align: center
+  }
+  .coffee-menus-wrapper
+  {
+    display: flex;
+    width: 1400px;
+    color: #000000;
+    justify-content: space-between;
+    margin-bottom: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 
- 
+  .coffee_menu
+  {
+    display: flex;
+    width: 438px;
+    height: 520px
+  }
+  .nav-list-headline
+  {
+    color: #BB945F;
+    font-family: Forum;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 2px;
+    text-transform: capitalize;
+  }
+  
+  .nav-item-coffee 
+  {
+    color: #000000;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 2px;
+    text-transform: capitalize;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    margin-top: 40px;
+  }
+  .coffee-name
+  {
+    flex-grow: 1;
+  }
+    .dollar_sign{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
+  .dollar_sign::before {
+    content: "";
+    display: inline-block;
+    height: 1px;
+    background-color: #0C0C0E;
+    margin-right: 60px;
+    margin-left: 60px;
+    width: 100px;
+    flex-grow: 1;
+  }
+
+  .nav-item-coffee li {
+    margin-bottom: 40px;
+  }
