--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@
   .section_title
   {
     position: relative;
-    
+   
   }
   .section_title::after {
     content: "";
@@ -296,6 +296,7 @@
     justify-content: space-between; 
     align-items: flex-start;
     flex-wrap: wrap;
+    margin-right: 20px;
   }
   
   .books_container > * {
@@ -518,3 +519,107 @@
   .nav-item-coffee li {
     margin-bottom: 40px;
   }
+  .our_contacts-headline-wrapper
+  {
+    width: 1400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .our_contacts-content-wrapper
+  {
+    width: 1400px;
+    height: 414px;
+    display: flex;
+    flex-direction: row;
+    gap: 200px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: 20px;
+  
+  }
+  .contacts-data-headline
+  {
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 2px;
+    margin-bottom: 40px;
+
+  }
+  .our_tel
+  {
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 2px;
+    margin-bottom: 20px;
+  }
+  .our_tel a
+  {
+  color: inherit;
+  text-decoration: none;
+  }
+  #third_tel {
+    margin-bottom:40px
+  }
+  
+  .seniority
+  {
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 2px;
+    margin-bottom: 20px;
+  }
+  .our_mail
+  {
+font-family: Inter;
+font-size: 20px;
+font-weight: 400;
+line-height: 40px;
+letter-spacing: 2px;
+margin-bottom: 34px;
+  }
+  .our_mail a
+  {
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 2px;
+    color: inherit;
+    text-decoration: none;
+  }
+.our_mail a, 
+.our_tel a {
+  position: relative;
+  transition: .2s ease;
+}
+
+.our_mail a:hover,
+.our_tel a:hover {
+  transform: scale(1.1); 
+}
+
+.our_mail a:hover::after,
+.our_tel a:hover::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -2px;
+  height: 2px;
+  background-color: #1da1f2;
+}
+.contacts-data
+{
+width: 503px;
+height: 380px;
+margin-top: 40px;
+margin-bottom: 34px;
+}
+
