--- a/style.css
+++ b/style.css
@@ -138,19 +138,27 @@
     display:flex;
     justify-content: center;
   }
-  .section_title
+  
+  h2
   {
+    font-family: Forum;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 2px;
+    color: #0C0C0E;
     position: relative;
-   
   }
-  .section_title::after {
+  h2:after {
     content: "";
     position: absolute;
+    bottom: -20px;
     width: 50px; 
     height: 1px;
-    background-color:#0C0C0E;
+    background-color: #0C0C0E;
     left: 50%;
     transform: translateX(-50%);
+    
   }
   .about-text
   {
@@ -162,6 +170,7 @@
     font-weight: 400;
     line-height: 40px;
     color:#000000;
+    margin-bottom: 20px;
   }
   .about_images_wrapper
   {
@@ -222,17 +231,17 @@
     margin-left: 20px;
     margin-bottom: 40px;
   }
-  label
+  .radio_button
   {
     font-family: "Inter";
     font-size: 20px;
     font-weight: 400;
     line-height: 24.2px;
     color: #000000;
-    margin-right: 90px ;
+    margin-right: 90px;
     margin-left:20px
   }
-  label:last-child {
+  .radio-button__input:last-child {
     margin-right: 0; 
   }
   
@@ -401,9 +410,15 @@
     padding: 0px;
     margin-bottom: min(15px);
     position: absolute;
-    bottom: 0; 
-    
+    bottom: 0;
+    transition: background 0.4s;
   }
+  .buy-book_button:hover
+{
+  border: 1px solid #BB945F;
+  background: #BB945F;
+}
+
   .book
   {
     align-self: flex-end;
@@ -622,4 +637,183 @@ height: 380px;
 margin-top: 40px;
 margin-bottom: 34px;
 }
+.library_digit_container
+{
+  width:1400px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.library_digit-headline-wrapper
+{
+  width: 1400px;
+  display: flex;
+  justify-content: center;
+}
+.library_digit_form
+{
+  width: 600px;
+  height: 386px;
+  border: 3px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 3px solid #BB945F
+}
+input[type="text"]
+{
+width: 520px;
+height: 66px;
+top: 110px;
+left: 40px;
+border-radius: 10px;
+color:#FFFFFF;
+margin-top: 20px;
+margin-left: 20px;
+margin-right: 20px;
+outline: none;
+font-family: Forum;
+font-size: 30px;
+font-weight: 400;
+line-height: 50px;
+letter-spacing: 0.02em;
+color: #8E8E8E;
+;
+;
+}
+.form_wrapper
+{
+width: 560px;
+height: 272px;
+top: 20px;
+left: 20px;
+background-color: #BB945F;
+margin-top: 20px;
+margin-bottom: 20px;
+display: flex;
+flex-direction: column;
+}
+.form_headline
+{
+font-family: Forum;
+font-size: 30px;
+font-weight: 400;
+line-height: 50px;
+letter-spacing: 0.02em;
+color: #000000;
+margin-top: 20px;
+margin-left: 20px;
+}
+.headline_digit_lib
+{
+  font-family: Inter;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 36px;
+  letter-spacing: 0.02em;
+}
+.headline_digit_lib-wrapper
+{
+  width: 600px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+  margin-top: 40px;
+}
+#checkButton {
+  display: inline-block;
+  height: 44px;
+  padding: 10px 40px;
+  border-radius: 2px;
+  border: 1px solid #0C0C0E;
+  cursor: pointer;
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 1px;
+  text-align: center;
+  transition: background 0.4s;
+}
 
+#checkButton:hover
+{
+  border: 1px solid #BB945F;
+  background: #BB945F;
+}
+
+form
+{
+  margin: 0;
+  padding: 0;
+}
+label
+{
+  margin: 0;
+  padding: 0;
+}
+
+#first_text-reader-card
+{
+  font-family: Forum;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 33px;
+  letter-spacing: 0.02em;
+  text-align: right;
+  margin-bottom: 35px;
+}
+#second_text-reader-card
+{
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  text-align: right;
+  margin-bottom: 35px;
+}
+.left-menu_button
+{
+width:75px;
+height:30px;
+border-radius: 2px;
+border: 1px solid #0C0C0E;
+font-family: Inter;
+font-size: 10px;
+font-weight: 700;
+line-height: 12px;
+letter-spacing: 1px;
+text-align: center;
+cursor: pointer;
+margin-right: 20px;
+transition: background 0.4s;
+}
+.left-menu_button:hover
+{
+  border: 1px solid #BB945F;
+  background: #BB945F;
+}
+.left-menu_button:last-child
+{
+  margin-right: 0px;
+}
+.reg_and_sign_buttons
+{
+  display: flex;
+  justify-content: flex-end;
+}
+.right-part-container
+{
+width: 456px;
+height: 253px;
+margin-right: 20px;
+margin-top: 40px;
+}
+p
+{
+  margin: 0;
+  padding: 0;
+}
