--- a/style.css
+++ b/style.css
@@ -844,7 +844,7 @@ p
 .top-content_footer
 {
   width: 1440px;
-  height: 90px;
+  height: 120px;
   display:flex;
   justify-content: space-between;
 }
@@ -876,27 +876,35 @@ font-weight: 400;
 line-height: 20px;
 letter-spacing: 0em;
 color: #FFFFFF;
+text-align: left;
 }
 .top-content-right-container
 {
   margin-left: 20px;
   margin-top: 20px;
 }
+
 .top-content-left-container
 {
   margin-right: 20px;
+  margin-top: 20px;
 }
 #weekend-days-schedule
 {
   margin-top: 10px;
 }
+
+
 .low-content_footer
 {
   width: 1440px;
   display: flex;
   justify-content: space-around;
-  margin-bottom: 44px;
-  margin-top: 74px;
+  
+  margin-top: 44px;
+  height: 120px;
+  align-items: center;
+  transform: translateY(-30px);
 }
 .year-of-creation
 {
@@ -906,6 +914,7 @@ font-weight: 400;
 line-height: 20px;
 letter-spacing: 2px;
 color: #FFFFFF;
+transform: translateX(-130px);
 
 }
 .course-link
@@ -917,7 +926,10 @@ line-height: 20px;
 letter-spacing: 2px;
 color: #FFFFFF;
 cursor: pointer;
+transform: translateX(70px);
+text-align: center;
 }
+
 .course-link a
 {
   text-decoration: none;
@@ -933,6 +945,7 @@ letter-spacing: 2px;
 color: #FFFFFF;
 cursor: pointer;
 text-decoration:none;
+transform: translateX(140px);
 }
 .github-link a
 {
@@ -940,15 +953,15 @@ text-decoration:none;
   color: inherit;
 }
 
-.low-content_footer::before {
+.top-content_footer::after {
   content: "";
   width: 1400px;
   border: 1px solid #FFFFFF;
   display: flex;
   position: absolute;
-  align-self: center;
- 
-  margin-top: -30px;
+  align-self: flex-end;
   margin-left: 20px;
   margin-right: 20px;
+  transform: translateY(20px);
+
 }
