--- a/style.css
+++ b/style.css
@@ -1041,9 +1041,13 @@ transform: translateX(140px);
     display: flex;
     margin: 0;
     padding: 0;
-    width: 728px;
+    width:728px;
     height: 50px;
     justify-content: initial;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 
   .wrapper_headline_nav-list
@@ -1071,5 +1075,14 @@ transform: translateX(140px);
   }
   .wrapper_icon {
     margin-right: 40px;
+  }
+  .wrapper_welcome
+  {
+    width: 768px;
+    height: 600px
+  }
+  .welcome_img img{
+    max-width: 100%;
+    height: 600px;
   }
 }
