--- a/style.css
+++ b/style.css
@@ -217,6 +217,10 @@
     border-radius: 50px;
     
   }
+  .square_click-zone-mobile 
+  {
+    display: none;
+  }
 
   .square_click-zone {
     width: 26px;
@@ -237,6 +241,10 @@
     justify-content: center;
     margin-top: 40px;
   }
+  .arrow_left-mobile,
+.arrow_rigth-mobile {
+  display: none;
+}
   .favorites_wrapper
   {
     width: 1440px;
@@ -1019,13 +1027,21 @@ transform: translateX(140px);
 
 }
 
-
+@media (width: 769px)
+{
+  
+}
 @media (max-width: 768px) {
   
   body
   {
     margin: 0;
     padding: 0;
+  }
+  .page_wrapper
+  {
+      max-width: 100%;
+      margin: 0 auto;
   }
   .header
   {
@@ -1085,4 +1101,115 @@ transform: translateX(140px);
     max-width: 100%;
     height: 600px;
   }
+  .about_welcome
+  {
+    width:100%;
+  }
+  .about-text
+  {
+    width: 100%;
+  }
+ .icon_profile:nth-of-type(4),
+ .icon_profile:nth-of-type(5) {
+  display: none;
+}
+.about_images_wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.wrapper_pagination {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
+}
+.square_click-zone-mobile
+{
+  width: 26px;
+    height: 26px;
+    cursor: pointer;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.arrow_left-mobile
+{
+  margin-right: 58px;
+  display: flex;
+  transform: translateY(50%);
+}
+.arrow_rigth-mobile
+{
+  margin-left: 58px;
+  display: flex;
+  transform: translateY(60%);
+}
+.about_images_wrapper
+{
+  display: flex;
+  align-items: center;
+}
+.favorites_wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.radio-buttons {
+  margin-left: 20px;
+}
+.books_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-right: 20px;
+  width: 100%;
+  height: 100%;
+}
+.coffee-menus-wrapper {
+  display: flex;
+  width: 100%;
+  color: #000000;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+  margin-left: 20px;
+}
+.coffee_container
+{
+  margin-top: 40px;
+  width: 100%;
+}
+.coffee-text-wrapper
+{
+  width: 100%;
+}
+.nav-menu-deserts
+{
+  transform: translateX(0);
+  
+}
+.our_contacts-headline-wrapper {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.our_contacts-content-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 100px;
+  margin-bottom: 40px;
+  margin-left: 20px;
+  
+}
+.contact_map
+{
+  justify-content: center;
+}
+
 }
