feat:optimize digital library card and footer

--- a/style.css
+++ b/style.css
@@ -1205,11 +1205,96 @@ transform: translateX(140px);
   gap: 100px;
   margin-bottom: 40px;
   margin-left: 20px;
-  
+  margin-right: 20px;
 }
 .contact_map
 {
   justify-content: center;
 }
+.library_digit-headline-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.library_digit_container {
+  width: 100%;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center
+}
+.left-part-container {
+  margin-left: 0px;
+  margin-bottom: 21px;
+}
+.right-part-container
+{
+    width: 456px;
+    height: 253px;
+    
+}
+.reader_card {
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+#second_text-reader-card
+{
+  text-align: center;
+  margin-bottom: 40px;
+}
 
+.right-part-container {
+
+  width: 600px;
+  margin-bottom: 40px;
+}
+.form_wrapper input
+{
+  margin-left: 20px;
+}
+.footer_container {
+  width: 100%;
+  height: 250px;
+  background-color: #0C0C0E;
+}
+.top-content_footer {
+  width: 100%;
+  height: 120px;
+  display: flex;
+  justify-content: space-between;
+}
+.schedule {
+  text-align: right;
+}
+.top-content_footer::after {
+    width: 728px;
+    display: flex;
+    position: absolute;
+    align-self: flex-end;
+    margin-left: 20px;
+    margin-right: 20px;
+    transform: translateY(20px)
+}
+.low-content_footer
+{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 44px;
+  height: 120px;
+  align-items: center;
+  transform: translateY(-30px);
+  gap:60px;
+}
+.year-of-creation {
+  transform: translateX(0px);
+}
+.github-link {
+transform: translateX(0px)
+}
+.course-link {
+  transform: translateX(0px);
+}
 }
